feat: footer works in mobile, fixes to header border radius

--- a/src/components/ProjectsGallery/ProjectsGallery.scss
+++ b/src/components/ProjectsGallery/ProjectsGallery.scss
@@ -10,7 +10,7 @@
     
     .project {
         flex-basis: 30%;
-        // flex-shrink: 1;
+        flex-shrink: 1;
         // flex-grow: 1;
     }
 }
