--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -11,10 +11,11 @@ footer {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: auto;
     grid-template-areas:
-        "more contact"; 
+        "more contact" 
+        "attr attr";
         
     min-height: 250px;
-    height: 25vh;
+    height: 100%;
     width: 100%;
     margin-top: 4vh;
     padding: 0 5%;
@@ -78,6 +79,17 @@ footer {
         a {
             grid-column: link;
         }
+
+        @media screen and (max-width: 425px) {
+            // background-color: green;
+            grid-template-columns: [h3] 1fr;
+            // text-align: center;
+
+            a {
+                display: none;
+            }
+
+        }
     }
 }
 
@@ -87,5 +99,17 @@ footer {
 
     p {
         // margin-top: 4% 0;
+    }
+}
+
+#footer-attributions {
+    grid-area: attr;
+    width: 100%;
+    text-align: center;
+
+    color: $clr-base-700;
+
+    & a {
+        color: $clr-base-700;
     }
 }
