--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -1,21 +1,24 @@
 @import 'style/colors', 'style/breakpoints', 'style/responsive', 'style/fonts';
 
 .project {
-    display: grid;
-    min-width: 240px;
-    max-width: 250px;
+    // display: grid;
+    display: flex;
+    flex-direction: column;
 
+    // justify-items: ;
+    align-items: center;
+    
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 0.5fr 1fr;
     grid-template-areas:
         "image"
         "title"
         "description";
-    justify-items: center;
-    align-items: center;
 
+    min-width: 230px;
+    max-width: 250px;
+    
     border-radius: 100px;
-
     padding: 0px 15px 15px 15px;
 }
 
@@ -24,7 +27,7 @@
     place-items: center;
     grid-area: image;
     grid-template-areas: "inner-div";
-    height: 100%;
+    // height: 100%;
     padding: 10px 0px;
     width: 50%;
     margin: 0px;
@@ -36,12 +39,15 @@
     .project-image-outline {
         max-width: 100%;
         max-height: 100%;
+        opacity: 30%;
+        z-index: 1;
     }
 
     .project-image {
-        max-width: 70%;
-        max-height: 70%;
+        max-width: 100%;
+        max-height: 100%;
         color: red;
+        z-index: 2;
     }
 
 }
