--- a/src/components/SectionBrowser/SectionBrowser.scss
+++ b/src/components/SectionBrowser/SectionBrowser.scss
@@ -24,9 +24,14 @@ $ease-out-cubic: cubic-bezier(0.33, 1, 0.68, 1);
     }
 
     .sectionbrowser-header {
+        display: flex;
+        flex-wrap: wrap;
+
         position: sticky;
         position: -webkit-sticky;
         top: 0;
+
+        z-index: 10;
 
         display: flex;
         justify-content: space-around;
@@ -40,22 +45,25 @@ $ease-out-cubic: cubic-bezier(0.33, 1, 0.68, 1);
         border-radius: 10px 10px 0 0;
         @include browser-border;
         border-bottom: 0px;
+        box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.329);
 
         transition: font-size 0.5s;
         transition: padding 0.5s;
+        transition: border-radius 0.25s;
         
         // The list elements in the header (each of the sections in the header)
         li {
             list-style-type: none;
-
+            padding: 0.5em 1.0em;
+            border-radius: 10px;
+            
             // The actual button
             a {
                 color: black;
                 background-color: transparent;
-                padding: 0.5em 1.0em;
-                border-radius: 10px;
-
-                @include responsive-static(font-size, 8, 30);
+                
+                @include responsive-static(font-size, 16, 30);
+                text-align: center;
 
                 transition: background-color 0.2s $ease-out-cubic;
                 transition: font-size 0.4s $ease-out-cubic;
@@ -69,8 +77,8 @@ $ease-out-cubic: cubic-bezier(0.33, 1, 0.68, 1);
 
             // Current Section in header
             &.current {
+                background-color: white;
                 a {
-                    background-color: white;
                 }
             }
         }
@@ -80,7 +88,7 @@ $ease-out-cubic: cubic-bezier(0.33, 1, 0.68, 1);
     .sectionbrowser-content-section {
 
         // padding: 40px 10% 40px 10%;
-        padding: 5vh 10% 5vh 10%;
+        padding: 5vh 1%;
         // padding: 300px 10% 200px 10%; // TODO THIS IS PURELY FOR DEBUG GET RID OF THIS
 
         h2 {
@@ -125,17 +133,22 @@ $ease-out-cubic: cubic-bezier(0.33, 1, 0.68, 1);
     .sectionbrowser-header {
         // padding: 1.5em 0.4em;
         // height: 5em;
+        border-radius: 0px;
 
         li {
 
             a {
-                @include responsive-static(font-size, 8, 20);
+                @include responsive-static(font-size, 11, 20);
             }
 
             &.current a {
-                @include responsive-static(font-size, 8, 30);
+                @include responsive-static(font-size, 14, 30);
             }
             
         }
     }
+}
+
+.sectionbrowser .browser-padding {
+    padding: 0% 8%;
 }
