feat: unity projects have a border

--- a/src/style/colors/_colors.scss
+++ b/src/style/colors/_colors.scss
@@ -1,7 +1,7 @@
 $clr-primary: #45a29e;
 $clr-primary-tint: #66FCF1;
 $clr-primary-shade: #1F2833;
-$clr-secondary: #b4464c;
+$clr-secondary: #e7a730;
 // $clr-secondary:
 
 $clr-base-300: #eeeeee;
