--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -47,9 +47,28 @@
         max-width: 100%;
         max-height: 100%;
         color: red;
-        z-index: 2;
+        z-index: 2;        
     }
 
+    // border image for non-square ratio images
+    &.border-image {
+        height: 120px;
+        width: 120px;
+        padding: 0;
+        margin: 10px 0;
+        position: relative;
+        border-radius: 50%;
+        overflow: hidden;
+        border: 4px inset $clr-secondary;
+
+        .project-image {
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 100%;
+            width: 100%;
+        }
+    }
 }
 
 .project-title {
